--- a/Parte 2/style.css
+++ b/Parte 2/style.css
@@ -1,42 +1,74 @@
 header {
 
+  justify-content: space-evenly;
+  display: flex;
+  border-style: double;
 
 }
 
 
 h2 {
-
+  margin: 10px;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-style: double;
 }
 
 .nav {
+
+  display: flex; 
+  border-style: double;
 
 
   }
 
   li {
 
-
+    margin: 10px;
+    width: 100%;
+    text-align: center;
+    border-style: double;
   }
 
   .content{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
 }
 
   .aside {
 
+    display: flex;
+    flex-direction: column;
+    width: 20%; 
+      flex-grow: 1;
+      border-style: double;
+
   }
 
   .slidebox{
+
+    height: 100%;
+    border-style: double;
 
    
   }
 
   .article{
 
+    flex-grow: 4;
+    width: 60%;
+    border-style: double;
+
   }
 
 
 .poem{
+  
 
 }
 
@@ -45,9 +77,13 @@ h2 {
   Screen = B/w 600px to 990px*/
   @media (min-width:600px) and (max-width: 990px)  {
     .article {
+      flex-grow: 2;
+      flex-direction: column;
+      width: 67%;
 
   } 
 header{
+  display: none;
 
 }
 }
@@ -57,15 +93,24 @@ header{
 
 header,.content{
 
+  display: none; 
 }
 
 .nav {
 
+    flex-direction: column;
+    align-items: center;
+    flex-direction: column;
 
   }
 
 
 .nav > li {
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+  align-content: center;
+  width: 90%;
 
 }
 
